# ppllocr

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
ppllocr/: __init__.py  inference.py
